[package]
name = "programming_conversations"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "fortran"
path = "src/fortran.rs"

[[bin]]
name = "binary"
path = "src/binary.rs"

[[bin]]
name = "smalltalk"
path = "src/smalltalk.rs"

[dependencies]
itertools = "0.13.0"
